--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
+
 body {
     /*fondo de la pagina*/
     background-image: url('imagenes/fondos-para-la-pagina/fondo-tienda.png');
@@ -21,10 +23,89 @@ body {
     margin: 0 auto;
     max-width: 1200px;
     font-family: 'Lato';
-    color: #333;
+    color: #ffffff;
     background-color: #000;
-    margin-left: 90px; /* Ancho de la barra de navegación */
+    margin-left: 70px; /* Ancho de la barra de navegación */
 }
+/*-----------------------------PERTENECE A LOS ESTILOS DEL INICIO----------------------------------------------------------------------------------------------------*/
+
+.container-subtitle h2{
+    white-space: nowrap;
+    color: #ffffff;
+}
+.container-subtitle b{
+    white-space: nowrap;
+    color: white;
+}
+.container-text p{
+    white-space: nowrap;
+    color: white;
+}
+
+/*---------------------------Corresponde a los estilos del bloque de left 4 dead 2----------------------------------------------------------------------------------*/
+.container-title-l4d2 h2{
+    white-space: nowrap;
+    color: white;
+    display: flex;
+    align-items: center;
+    font-size: 45px;
+    padding: 15px;
+}
+
+.container-l4d2{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);/*aqui se ajusta la cantidad de productos que se colocan por fila*/
+    gap: 20px;/*espacio entre los productos*/
+    grid-row-gap: 20px;/*espacio entre filas*/
+    margin-left: 1px; /* Ancho espacio entre el nav y los productos*/
+    padding-top: 50px; /* Espacio para compensar la altura del nav */
+}
+
+/*---------------------------Corresponde a los estilos del bloque de resident evil ----------------------------------------------------------------------------------*/
+
+.container-title-re h2{
+    white-space: nowrap;
+    color: white;
+    display: flex;
+    align-items: center;
+    font-size: 45px;
+    padding: 15px;
+}
+
+.container-re{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);/*aqui se ajusta la cantidad de productos que se colocan por fila*/
+    gap: 20px;/*espacio entre los productos*/
+    grid-row-gap: 20px;/*espacio entre filas*/
+    margin-left: 1px; /* Ancho espacio entre el nav y los productos*/
+    padding-top: 50px; /* Espacio para compensar la altura del nav */
+}
+
+/*---------------------------Corresponde a los estilos del bloque de gta san andreas----------------------------------------------------------------------------------*/
+
+.container-title-gtasa h2{
+    white-space: nowrap;
+    color: white;
+    display: flex;
+    align-items: center;
+    font-size: 45px;
+    padding: 15px;
+}
+.container-gtasa{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);/*aqui se ajusta la cantidad de productos que se colocan por fila*/
+    gap: 20px;/*espacio entre los productos*/
+    grid-row-gap: 20px;/*espacio entre filas*/
+    margin-left: 1px; /* Ancho espacio entre el nav y los productos*/
+    padding-top: 50px; /* Espacio para compensar la altura del nav */
+}
+
+
+
+
+
+
+
 
 /*-----------------------------PERTENECE A LOS ESTILOS DE LA TIENDA------------------------------------------------------------------------------------------------*/
 
@@ -36,14 +117,14 @@ nav {
     top: 0;
     left: 0;
     bottom: 0;
-    height: 100%;
+    height: 95%;
     width: 90px;
     background: #fff;
     transition: width 0.2s linear;
     box-shadow: 0 20px 700px rgba(0, 0, 0, 0.1);
     overflow-y: auto; /* Añadido para habilitar el desplazamiento si el contenido del menú es demasiado largo */
     z-index: 100; /* Valor alto para asegurarse de que el menú esté delante de otros elementos */
-
+    align-items: baseline;/*alinia el texto con los iconos */
 }
 
 nav:hover {
@@ -58,6 +139,7 @@ nav:hover {
     transition: all 0.5s ease;
     margin: 5px 1px 1px 5px;
     width: 80px;
+    font-size: 18px;
 }
 
 .home-icon{/*ICONO DE INICIO*/
@@ -150,21 +232,20 @@ nav:hover {
 /*-----------------------------ESTILOS DEL ENCABEZADO DE LA PAGINA-----------------------------------------------*/
 header {
     display: flex;
-    justify-content: space-between;
-    padding: 30px 0 40px 0;
-    align-items: center;
+    justify-content: space-between;/*para colocar los elementos al extremo*/
+    align-items: center;/*para centrar en vertical*/
+    padding: 20px 40px;/*ajusta el relleno segun sea necesario*/
 }
 
 .container-title{
-    position: absolute;
-    top: auto;
-    right: auto;
+    display: flex;
     align-items: center;
-    font-size: 40px;
-    
+    font-size: 45px;
+    padding: 15px;
+    z-index: 1; /*asegura que no se quedara por debajode ningun otro elemento de la pagina*/
 }
 
-.container-title h1{
+h1{
     color: white;
 }
 
@@ -175,6 +256,7 @@ header {
 }
 
 .icon-cart {
+    z-index: 999; /*asegura que no se quedara por debajode ningun otro elemento de la pagina*/
     width: 75px;
     height: 75px;
     stroke: #ffffff;
@@ -285,21 +367,27 @@ header {
 
 /*-------------------------ESTILOS DE LOS PRODUCTOS------------------------------------------------------------------------------------*/
 
+main{
+    padding: 20px 40px;/*ajusta el releno segun sea necesario*/
+
+}
+
 /*sombra para resaltar los productos*/
 .item:hover {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.65);
 }
 
 .container-items {
+    
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    margin-left: 90px; /* Ancho del nav */
+    grid-template-columns: repeat(4, 1fr);/*aqui se ajusta la cantidad de productos que se colocan por fila*/
+    gap: 20px;/*espacio entre los productos*/
+    margin-left: 1px; /* Ancho espacio entre el nav y los productos*/
     padding-top: 50px; /* Espacio para compensar la altura del nav */
 }
 
 .item {
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 img {
@@ -309,8 +397,8 @@ img {
 .item img {
     width: 100%;
     height: 300px;
-    object-fit: cover;
-    border-radius: 10px 10px 0 0;
+    object-fit: cover;/*lo ajustamos para que no se desborde*/
+    border-radius: 15px 15px 0 0;
     transition: all .5s;
 }
 
@@ -349,4 +437,19 @@ img {
     color: #fff;
     padding: 12px 5px;
     cursor: pointer;
+}
+
+/* Estilos para dispositivos con un ancho máximo de 768px (típicamente tabletas) */
+@media only screen and (max-width: 768px) {
+    /* Estilos específicos para tabletas */
+}
+
+/* Estilos para dispositivos con un ancho máximo de 480px (típicamente smartphones) */
+@media only screen and (max-width: 480px) {
+    /* Estilos específicos para smartphones */
+}
+
+/* Estilos para dispositivos con un ancho máximo de 320px (típicamente smartphones en orientación vertical) */
+@media only screen and (max-width: 320px) {
+    /* Estilos específicos para smartphones en orientación vertical */
 }
